# Hackathon-0-BuildingAutonomousFTEs-PersonalAIEmployee

./: CLAUDE.md  README.md
Gold_Tier/: .env.example  .gitignore  README.md  pyproject.toml
Gold_Tier/.claude/: settings.json
Gold_Tier/.watcher_state/: facebook_processed.json  filesystem_processed.json  gmail_processed.json  linkedin_processed.json  whatsapp_processed.json
Gold_Tier/AI_Employee_Vault_FTE/: Dashboard.md
Gold_Tier/audit/: __init__.py  health.py  logger.py  retry.py
Gold_Tier/docs/: COMPLETE_FIX_SUMMARY.md  GOLD_TIER_PROGRESS.md  RALPH_WIGGUM.md  SILVER_TIER_COMPLETION_SUMMARY.md
Gold_Tier/integrations/: facebook_poster.py
Gold_Tier/mcp_server/: linkedin_service.py  odoo_service.py  server.py
Gold_Tier/odoo/: README.md  docker-compose.yml
Gold_Tier/orchestrator/: main.py
Gold_Tier/ralph_wiggum/: __init__.py  __main__.py  stop_hook.py
Gold_Tier/scheduling/: facebook_post.ps1  setup_cron.sh  weekly_briefing.ps1  weekly_briefing.sh
Gold_Tier/tests/: test_ceo_briefing.py  test_facebook_permissions.py  test_facebook_token.py  test_gold_tier_integration.py  test_mcp_functional.py  test_multiple_mcp_servers.py  test_odoo_connection.py  test_ralph_wiggum.py  test_social_media.py  test_whatsapp_only.py
Gold_Tier/watchers/: __init__.py  base_watcher.py  facebook_watcher.py  linkedin_watcher.py  whatsapp_watcher.py
Silver_Tier/: README.md  pyproject.toml
Silver_Tier/.claude/: settings.json
Silver_Tier/.watcher_state/: filesystem_processed.json  gmail_processed.json  linkedin_processed.json  whatsapp_processed.json
(+267 files in other folders)
